--- a/app/src/main/res/layout/activity_mating_5.xml
+++ b/app/src/main/res/layout/activity_mating_5.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:text="Cats Target"
+        android:fontFamily="@font/mmedium"
         android:textColor="@color/navy"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -138,6 +139,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:text="Nama Kucing"
+        android:fontFamily="@font/mmedium"
         android:textAlignment="textStart"
         android:textColor="@color/navy"
         android:textSize="22sp"
@@ -150,6 +152,7 @@
         android:id="@+id/imageView22"
         android:layout_width="30dp"
         android:layout_height="25dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#FFFFFF"
         android:src="@drawable/location_cat"
@@ -165,6 +168,7 @@
         android:textAlignment="textStart"
         android:textColor="@color/navy"
         android:textSize="18sp"
+        android:fontFamily="@font/mlight"
         app:layout_constraintBottom_toBottomOf="@+id/imageView22"
         app:layout_constraintEnd_toEndOf="@+id/text_1"
         app:layout_constraintStart_toEndOf="@+id/imageView22"
@@ -186,6 +190,7 @@
         android:layout_marginStart="8dp"
         android:text="Umur(thn)/Ras"
         android:textAlignment="textStart"
+        android:fontFamily="@font/mlight"
         android:textColor="@color/navy"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView23"
@@ -208,6 +213,7 @@
         android:layout_marginStart="8dp"
         android:text="Kelamin"
         android:textAlignment="textStart"
+        android:fontFamily="@font/mlight"
         android:textColor="@color/navy"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView24"
@@ -238,6 +244,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/mmedium"
             android:text="Kirim Pesan"
             android:textColor="@color/navy"
             android:textSize="18sp" />
@@ -267,6 +274,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/mmedium"
             android:text="Sukai"
             android:textColor="@color/navy"
             android:textSize="18sp" />
@@ -304,6 +312,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:text="Vaksin"
+        android:fontFamily="@font/mmedium"
         android:textAlignment="textStart"
         android:textColor="@color/navy"
         android:textSize="18sp"
@@ -326,6 +335,7 @@
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:text="11-11-2020"
+        android:fontFamily="@font/mlight"
         android:textAlignment="textStart"
         android:textColor="@color/navy"
         android:textSize="18sp"
@@ -352,6 +362,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:text="Suntik Anti Parasit"
+        android:fontFamily="@font/mmedium"
         android:textAlignment="textStart"
         android:textColor="@color/navy"
         android:textSize="18sp"
@@ -373,6 +384,7 @@
         android:layout_width="0dp"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/mlight"
         android:text="11-11-2020"
         android:textAlignment="textStart"
         android:textColor="@color/navy"
