--- a/app/src/main/res/layout/item_history_mating.xml
+++ b/app/src/main/res/layout/item_history_mating.xml
@@ -55,6 +55,7 @@
             android:layout_width="53dp"
             android:layout_height="13dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/mmedium"
             android:text="CatName"
             android:textAlignment="textStart"
             android:textColor="@color/navy"
@@ -67,6 +68,7 @@
             android:id="@+id/textView15"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/mlight"
             android:layout_marginStart="8dp"
             android:layout_marginTop="5dp"
             android:text="Kelamin"
@@ -82,6 +84,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:fontFamily="@font/mlight"
             android:layout_marginTop="5dp"
             android:text="Umur (thn)/Ras"
             android:textAlignment="textStart"
@@ -97,6 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="CatName"
+            android:fontFamily="@font/mmedium"
             android:textAlignment="textStart"
             android:textColor="@color/navy"
             android:textSize="12sp"
@@ -110,6 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="Kelamin"
+            android:fontFamily="@font/mlight"
             android:textAlignment="textStart"
             android:textColor="@color/navy"
             android:textSize="12sp"
@@ -121,6 +126,7 @@
             android:id="@+id/textView18"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/mlight"
             android:layout_marginTop="5dp"
             android:text="Umur (thn)/Ras"
             android:textAlignment="textStart"
