--- a/app/src/main/res/layout/item_list_cat.xml
+++ b/app/src/main/res/layout/item_list_cat.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="CatName"
+            android:fontFamily="@font/mmedium"
             android:textAlignment="center"
             android:textColor="@color/navy"
             android:textSize="18sp"
@@ -52,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Kelamin"
+            android:fontFamily="@font/mlight"
             android:textSize="18sp"
             android:textAlignment="center"
             android:textColor="@color/navy"
@@ -68,6 +70,7 @@
             android:layout_marginTop="8dp"
             android:text="Umur (thn)/Ras"
             android:textAlignment="center"
+            android:fontFamily="@font/mlight"
             android:textSize="18sp"
             android:textColor="@color/navy"
             android:textStyle="bold"
