--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -16,21 +16,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <TextView
         android:id="@+id/textView17"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="@font/mmedium"
         android:text="Dashboard"
         android:textAlignment="center"
         android:textColor="@color/navy"
-        android:textSize="28sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
     <ImageView
         android:id="@+id/imageView14"
@@ -46,6 +50,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="40dp"
+        android:fontFamily="@font/mmedium"
         android:text="Mating"
         android:textAlignment="center"
         android:textColor="@color/salem"
@@ -74,6 +79,7 @@
         android:text="My Pets"
         android:textAlignment="center"
         android:textColor="@color/soft_guava"
+        android:fontFamily="@font/mmedium"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
