--- a/app/src/main/res/layout/activity_history_mating.xml
+++ b/app/src/main/res/layout/activity_history_mating.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:text="Riwayat Perkawinan"
+        android:fontFamily="@font/mmedium"
         android:textColor="@color/navy"
         android:textSize="25sp"
         android:textStyle="bold"
