--- a/app/src/main/res/layout/activity_mating_2.xml
+++ b/app/src/main/res/layout/activity_mating_2.xml
@@ -13,6 +13,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="16dp"
         android:text="JUDUL"
+        android:fontFamily="@font/mmedium"
         android:textAlignment="center"
         android:textColor="@color/navy"
         android:textSize="25sp"
@@ -52,6 +53,7 @@
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:text="Nama Kucing"
+            android:fontFamily="@font/mmedium"
             android:textStyle="bold"
             android:textColor="@color/navy"
             android:textSize="22sp"
@@ -65,6 +67,7 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:text="Kelamin"
+            android:fontFamily="@font/mlight"
             android:textColor="@color/jeans"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView20"
@@ -76,6 +79,7 @@
             android:layout_height="30dp"
             android:text="Umur/Ras"
             android:textColor="@color/jeans"
+            android:fontFamily="@font/mlight"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView21"
             app:layout_constraintTop_toBottomOf="@+id/textView21" />
@@ -102,6 +106,7 @@
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/mmedium"
             android:text="Lokasi"
             android:textColor="@color/navy"
             android:textSize="18sp"
@@ -123,6 +128,7 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:text="Lokasi Saya Sekarang"
+            android:fontFamily="@font/mlight"
             android:textColor="@color/jeans"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView17"
@@ -136,6 +142,7 @@
             android:layout_height="30dp"
             android:text="Rumah"
             android:textColor="@color/jeans"
+            android:fontFamily="@font/mlight"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView23"
             app:layout_constraintTop_toBottomOf="@+id/textView23" />
@@ -145,6 +152,7 @@
             android:layout_height="30dp"
             android:text="Tambah Lokasi Baru"
             android:textColor="@color/navy"
+            android:fontFamily="@font/mmedium"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/textView25"
@@ -172,6 +180,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Jarak Maksimum"
+            android:fontFamily="@font/mmedium"
             android:textColor="@color/navy"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -184,6 +193,7 @@
             android:layout_height="30dp"
             android:layout_marginEnd="16dp"
             android:text="530 km"
+            android:fontFamily="@font/mlight"
             android:textAlignment="textEnd"
             android:textColor="@color/salem"
             app:layout_constraintBottom_toBottomOf="@+id/textView26"
@@ -238,6 +248,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginBottom="32dp"
+                    android:fontFamily="@font/mmedium"
                     android:text="Filter Menurut Ras"
                     android:textColor="@color/navy"
                     android:textSize="15sp"
@@ -265,6 +276,7 @@
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginBottom="16dp"
+        android:fontFamily="@font/mmedium"
         android:text="Mulai Pencarian"
         android:textColor="@color/navy"
         android:textSize="15sp"
