--- a/app/src/main/res/layout/activity_myprofile.xml
+++ b/app/src/main/res/layout/activity_myprofile.xml
@@ -74,10 +74,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:focusableInTouchMode="true"
+            android:focusedByDefault="true"
+            android:fontFamily="@font/mmedium"
             android:text="Dita Shafira Wahyudi"
             android:textAlignment="center"
             android:textColor="@color/army"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
             app:layout_constraintStart_toStartOf="@+id/constraintLayout"
@@ -87,7 +90,9 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="Lokasiku"
+            android:fontFamily="@font/mlight"
             android:textAlignment="center"
             android:textColor="@color/army"
             android:textSize="15dp"
@@ -102,54 +107,11 @@
             android:text="Banyuwangi"
             android:textColor="@color/army"
             android:textSize="15dp"
+            android:fontFamily="@font/mmedium"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
             app:layout_constraintStart_toStartOf="@+id/constraintLayout"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:text="Kucingku"
-            android:textColor="@color/army"
-            android:textSize="15dp"
-            app:layout_constraintEnd_toStartOf="@+id/textView7"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4"
-            android:textColor="@color/army"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/textView9"
-            app:layout_constraintStart_toStartOf="@+id/textView9"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:text="Jodoh"
-            android:textColor="@color/army"
-            android:textSize="15dp"
-            app:layout_constraintStart_toEndOf="@+id/textView8"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-        <TextView
-            android:id="@+id/textView14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="55"
-            android:textColor="@color/army"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/textView10"
-            app:layout_constraintStart_toStartOf="@+id/textView10"
-            app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -166,6 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Username"
+            android:fontFamily="@font/mlight"
             android:textAlignment="textStart"
             android:textColor="@color/soft_guava"
             android:textSize="18sp"
@@ -203,6 +166,7 @@
             android:layout_marginTop="24dp"
             android:text="username@gmail.com"
             android:textColor="@color/soft_guava"
+            android:fontFamily="@font/mlight"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/textView11"
@@ -238,6 +202,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="Pengaturan"
+            android:fontFamily="@font/mlight"
             android:textColor="@color/soft_guava"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -283,6 +248,7 @@
             android:textColor="@color/soft_guava"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:fontFamily="@font/mlight"
             app:layout_constraintStart_toEndOf="@+id/imageView9"
             app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
@@ -312,6 +278,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:fontFamily="@font/mmedium"
             android:text="Kucingku"
             android:textColor="@color/soft_guava"
             android:textSize="26sp"
