--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,43 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/ic_android_mobile___1"
+    android:layout_height="wrap_content"
+    android:background="@color/beige"
     tools:context=".MainActivity">
-
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/textView5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/mmedium"
         android:text="Daftar"
         android:textAlignment="textStart"
         android:textColor="@color/navy"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView00"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:src="@drawable/ic_asset_2"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/menu_layout"
+        android:background="@drawable/menu_layout_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.128"
+        app:layout_constraintTop_toBottomOf="@+id/imageView00"
         tools:ignore="MissingConstraints">
+
+<!--        <de.hdodenhof.circleimageview.CircleImageView-->
+<!--            android:id="@+id/profile_image"-->
+<!--            android:layout_width="150dp"-->
+<!--            android:layout_height="150dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:src="@drawable/photo_human"-->
+<!--            app:civ_border_color="@color/gray"-->
+<!--            app:civ_border_width="2dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@id/constraintLayout2" />-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/add_photo"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="35dp"-->
+<!--            android:src="@drawable/add_button"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/profile_image"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/profile_image" />-->
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/btnSolid"
@@ -45,7 +76,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -53,12 +84,13 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
-
+                android:id="@+id/username"
                 style="@style/MyTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_user"
                 android:drawablePadding="10dp"
+                android:fontFamily="@font/mlight"
                 android:hint="Nama Pengguna"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -74,11 +106,13 @@
             app:layout_constraintTop_toBottomOf="@+id/btnSolid">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email"
                 style="@style/MyTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_message"
                 android:drawablePadding="10dp"
+                android:fontFamily="@font/mlight"
                 android:hint="Email "
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -94,11 +128,13 @@
             app:layout_constraintTop_toBottomOf="@+id/btnSolid2">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/location"
                 style="@style/MyTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_location"
                 android:drawablePadding="10dp"
+                android:fontFamily="@font/mlight"
                 android:hint="Alamat"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -114,11 +150,13 @@
             app:layout_constraintTop_toBottomOf="@+id/btnSolid3">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password"
                 style="@style/MyTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_hanger"
                 android:drawablePadding="10dp"
+                android:fontFamily="@font/mlight"
                 android:hint="Kata Sandi"
                 android:inputType="textPassword"
                 android:singleLine="true" />
@@ -135,23 +173,27 @@
             app:layout_constraintTop_toBottomOf="@+id/btnSolid4">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/repeat"
                 style="@style/MyTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_secure_shield"
                 android:drawablePadding="10dp"
+                android:fontFamily="@font/mlight"
                 android:hint="Ulangi Kata Sandi"
                 android:inputType="textPassword"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <dita.shafira.mate.component.BtnSolid
+        <dita.shafira.mate.component.BtnOutline
+            android:id="@+id/register"
             android:layout_width="0dp"
             android:layout_height="42dp"
             android:layout_marginTop="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="50dp"
+            android:fontFamily="@font/mmedium"
             android:text="Daftar"
-            android:textColor="@color/soft_guava"
+            android:textColor="@color/gray"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/btnSolid4"
@@ -160,4 +202,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
