--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -20,7 +20,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:text="Judul Disini"
+        android:text="Sunting Profile"
+        android:fontFamily="@font/mmedium"
         android:textColor="@color/navy"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -58,6 +59,7 @@
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:text="Ubah Profile"
+            android:fontFamily="@font/mmedium"
             android:textColor="@color/gray"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -100,6 +102,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="32dp"
+            android:fontFamily="@font/mmedium"
             android:text="Sembunyikan saya"
             android:textColor="@color/gray"
             android:textSize="18sp"
@@ -144,6 +147,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginBottom="32dp"
             android:text="Notifikasi"
+            android:fontFamily="@font/mmedium"
             android:textColor="@color/gray"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -185,6 +189,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="32dp"
+            android:fontFamily="@font/mmedium"
             android:text="Keluar"
             android:textColor="@color/gray"
             android:textSize="18sp"
