--- a/app/src/main/res/layout/item_cat_profile.xml
+++ b/app/src/main/res/layout/item_cat_profile.xml
@@ -24,6 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
+            android:fontFamily="@font/mlight"
             android:text="catname"
             android:textColor="@color/army"
             android:textStyle="bold"
