--- a/app/src/main/res/layout/item_list_cat_2.xml
+++ b/app/src/main/res/layout/item_list_cat_2.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="CatName"
+            android:fontFamily="@font/mmedium"
             android:textAlignment="center"
             android:textColor="@color/navy"
             android:textSize="12sp"
@@ -52,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="Kelamin"
+            android:fontFamily="@font/mlight"
             android:textAlignment="center"
             android:textColor="@color/navy"
             android:textSize="12sp"
@@ -66,6 +68,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:fontFamily="@font/mlight"
             android:text="Umur (thn)/Ras"
             android:textAlignment="center"
             android:textColor="@color/navy"
